# e78CaH5s3vN4tDo9

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
binary_classification/: __init__.py  dataset.py  features.py  plots.py
binary_classification/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
models/: model.pkl
notebooks/: Happy_Customer_5.ipynb  Happy_Customers_1.ipynb  Happy_Customers_2.ipynb  Happy_Customers_3.ipynb  Happy_Customers_4.ipynb  Happy_Customers_5.ipynb
