[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "binary_classification"
version = "0.0.1"
description = "A binary classification project on the 'Happy Customers' dataset."
authors = [
  { name = "Cameron Cochrane" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["binary_classification"]
include = ["pyproject.toml", "binary_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["binary_classification"]
force-sort-within-sections = true

